# Copyright © Piotr Zolnierek
[package]
resolver = "3"
edition = "2024"
name = "xml_writer"
version = "0.5.0"
authors = ["Piotr Zolnierek <pzolnierek@gmail.com>"]
description = "writes xml, not pretty, but faaast"
license = "MIT/Apache-2.0"
repository = "https://github.com/pzol/xml_writer.git"
homepage = "http://github.com/pzol/xml_writer"
documentation = "https://docs.rs/xml_writer/latest/xml_writer/"

[lib]
name = "xml_writer"
